--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.535.0",
     "next": "15.4.4",
     "react": "19.1.0",
