--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-financial": "^0.2.1",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.535.0",
